--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movimente-se</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>
-   
+    <header>
     <nav id="nav-bar">
-       
+   
         <div class="logo">
             <img src="./assets/logo-pic.png" alt="movimente-se logo">
+        </div>
+        <div class="mobile-menu">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
         <div>
             <ul class="nav-links">
@@ -25,25 +31,8 @@
             <button class="btn btn-1" onclick="location.href=('./#contato')">Inscreva-se</button>
         </div>
     </nav>
-    <nav id="hamburger-nav">
-        <div class="logo">
-            <img src="./assets/logo-pic.png" alt="movimente-se logo">
-        </div>
-        <div class="hamburger-menu">
-            <div class="hamburger-icon" onclick="toggleMenu()">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <div class="menu-links">
-                <li><a href="#home" onclick="toggleMenu()" >Home</a></li>
-                <li><a href="#sobre" onclick="toggleMenu()" >Sobre Nós</a></li>
-                <li><a href="#planos" onclick="toggleMenu()" >Planos</a></li>
-                <li><a href="#contato" onclick="toggleMenu()">Contato</a></li>
-            </div>
-        </div>
+    </header>
 
-    </nav>
     <script src="script.js"></script>
 </body>
 </html>
