contatos e footer prontos

--- a/index.html
+++ b/index.html
@@ -207,6 +207,28 @@
             </div>
         </div>
     </section>
+    <section id="contato">
+        <div class="section__text">
+            <p class="p2-color">Nossos</p>
+            <h2 class="title title-2">Contatos</h2>
+        </div>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img src="./assets/instagram.png" alt="instagram icon" class="contact-icon"/>
+                <p><a href="https://www.instagram.com/movimente_secorumba/">@movimente_secorumba</a></p>
+            </div>
+            <div class="contact-info-container">
+                <img src="./assets/whatsapp.png" alt="whatsapp icon" class="contact-icon"/>
+                <p><a href="">67 99186-7172</a></p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+   
+        <p>Copyright &#169; 2025 Ana Bastos All Rights Reserved.</p>
+    
+    </footer>
     <script src="script.js"></script>
 </body>
 
