--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </ul>
             </div>
             <div class="btn-container">
-                <button class="btn btn-1" onclick="location.href=('./#contato')">Inscreva-se</button>
+                <button class="btn btn-1" onclick="location.href=('https://wa.me/67991867172')">Inscreva-se</button>
             </div>
         </nav>
     </header>
@@ -207,7 +207,7 @@
             </div>
             <div class="contact-info-container">
                 <img src="./assets/whatsapp.png" alt="whatsapp icon" class="contact-icon"/>
-                <p><a href="">67 99186-7172</a></p>
+                <p><a href="https://wa.me/67991867172">67 99186-7172</a></p>
             </div>
         </div>
     </section>
