atualizando btn inscreva-se

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
             </div>
             <div class="btn-container">
-                <button class="btn btn-3" onclick="location.href=('./#contato')">Inscreva-se</button>
+                <button class="btn btn-3" onclick="location.href=('https://wa.me/67991867172')">Inscreva-se</button>
             </div>
         </div>
     </section>
